content for shayri and fashion

--- a/index.html
+++ b/index.html
@@ -1768,11 +1768,11 @@
             </td>
           </tr>
         </table>
-        <!-- <div class="contentSize">
+        <div class="contentSize">
           <div id="conDivTalent">
   
           </div>
-        </div> -->
+        </div>
       </div>
 
       <div id="fashion-round3" class="tabContent3" style="display:none;">
@@ -1819,11 +1819,11 @@
             </td>
           </tr>
         </table>
-        <!-- <div class="contentSize">
+        <div class="contentSize">
           <div id="conDivTalent">
   
           </div>
-        </div> -->
+        </div>
       </div>
       <!-- <table class="tabFrame">
         <tr class="frames">
