--- a/index.html
+++ b/index.html
@@ -1769,7 +1769,7 @@
           </tr>
         </table>
         <div class="contentSize">
-          <div id="conDivTalent">
+          <div id="conDivTalent2">
   
           </div>
         </div>
@@ -1820,7 +1820,7 @@
           </tr>
         </table>
         <div class="contentSize">
-          <div id="conDivTalent">
+          <div id="conDivTalent3">
   
           </div>
         </div>
