--- a/index.html
+++ b/index.html
@@ -1056,116 +1056,100 @@
         </tr>
 
         <tr class="pos">
-          <td>19-09-2023</td>
-          <td>꧁༺ɨȶ'ֆ ʍɛɛռǟӄֆɦɨ༻꧂<br />ID:<a href="http://www.kktv1.com/m/?roomid=634167880">634167880</a></td>
+          <td>12-09-2024</td>
+          <td>mishtii🦄💫<br />ID:<a href="http://www.kktv1.com/m/?roomid=645237760">645237760</a></td>
           <td><img src="img/Vs-min.png" alt="" /></td>
-          <td>🎀❤️AKEERA❤️🎀<br />ID:<a href="http://www.kktv1.com/m/?roomid=559684988">559684988</a></td>
+          <td>Jhalak 🥰<br />ID:<a href="http://www.kktv1.com/m/?roomid=653583789">653583789</a></td>
           <td>20:00-20:15 IST</td>
         </tr>
 
         <tr class="pos">
-          <td>19-09-2023</td>
-          <td>"Vamp🖤 "<br />ID:<a href="http://www.kktv1.com/m/?roomid=643177643">643177643</a></td>
+          <td>12-09-2024</td>
+          <td>❥︎❤️⃝ ✧𝕊𝗵ᵣáԀ∂𝗵á࿐<br />ID:<a href="http://www.kktv1.com/m/?roomid=633447348">633447348</a></td>
           <td><img src="img/Vs-min.png" alt="" /></td>
-          <td>"💎S᭄Nαɳα? "<br />ID:<a href="http://www.kktv1.com/m/?roomid=642206675">642206675</a></td>
+          <td>✓®™Soni......🥀<br />ID:<a href="http://www.kktv1.com/m/?roomid=635752070">635752070</a></td>
           <td>20:15-20:30 IST</td>
         </tr>
 
         <tr class="pos">
-          <td>19-09-2023</td>
-          <td>"janviG "<br />ID:<a href="http://www.kktv1.com/m/?roomid=642203798">642203798</a></td>
+          <td>12-09-2024</td>
+          <td>(71) Nishu .<br />ID:<a href="http://www.kktv1.com/m/?roomid=619551924">619551924</a></td>
           <td><img src="img/Vs-min.png" alt="" /></td>
-          <td>"💞S᭄ꦿsaamaaya 💞 "<br />ID:<a href="http://www.kktv1.com/m/?roomid=591620682">591620682</a></td>
+          <td>𝐀𝐀𝐑𝐙𝐔💝<br />ID:<a href="http://www.kktv1.com/m/?roomid=648978283">648978283</a></td>
           <td>20:30-20:45 IST</td>
         </tr>
 
         <tr class="pos">
-          <td>19-09-2023</td>
-          <td>🎸Siya Singh 🎸🙂<br />ID:<a href="http://www.kktv1.com/m/?roomid=628264282">628264282</a></td>
+          <td>12-09-2024</td>
+          <td>👰🦋OℓᎥviα?💕<br />ID:<a href="http://www.kktv1.com/m/?roomid=591620682">591620682</a></td>
           <td><img src="img/Vs-min.png" alt="" /></td>
-          <td>"Ooru💫 "<br />ID:<a href="http://www.kktv1.com/m/?roomid=633310564">633310564</a></td>
+          <td>ʟᴀᴅʏ ʙɪʀᴅ🕊️<br />ID:<a href="http://www.kktv1.com/m/?roomid=643646077">643646077</a></td>
           <td>20:45-21:00 IST</td>
         </tr>
 
         <tr class="pos">
-          <td>19-09-2023</td>
-          <td>𝓐𝓴𝓼𝓱𝓲𝓽𝓪<br />ID:<a href="http://www.kktv1.com/m/?roomid=600872607">600872607</a></td>
+          <td>12-09-2024</td>
+          <td>Aliya❤❤❤<br />ID:<a href="http://www.kktv1.com/m/?roomid=584260474">584260474</a></td>
           <td><img src="img/Vs-min.png" alt="" /></td>
-          <td>"S᭄ 🍁 ℕ𝕌ℙ𝕌ℝ🍁 "<br />ID:<a href="http://www.kktv1.com/m/?roomid=631104396">631104396</a></td>
+          <td>🎀𝘿𝙚𝙫𝙞𝙡'𝙨ᴬⁿᵍᵉˡ<br />ID:<a href="http://www.kktv1.com/m/?roomid=586652371">586652371</a></td>
           <td>21:00-21:15 IST</td>
         </tr>
-
+<!-- 
         <tr class="pos">
           <td>19-09-2023</td>
           <td>"🎙️ Singer Sarita 🎧 "<br />ID:<a href="http://www.kktv1.com/m/?roomid=584004453">584004453</a></td>
           <td><img src="img/Vs-min.png" alt="" /></td>
           <td>"🦢₴᭄ꦿ 𝙈𝙊𝙉𝘼🍡 "<br />ID:<a href="http://www.kktv1.com/m/?roomid=614097927">614097927</a></td>
           <td>21:15-21:30 IST</td>
-        </tr>
-
+        </tr> -->
+<!-- 
         <tr class="pos">
           <td>19-09-2023</td>
           <td>🦋⃟✮⃝🇲u̷s̷k̷a̷n̷𝄟⃝)<br />ID:<a href="http://www.kktv1.com/m/?roomid=623248845">623248845</a></td>
           <td><img src="img/Vs-min.png" alt="" /></td>
           <td>"byee byee "<br />ID:<a href="http://www.kktv1.com/m/?roomid=616703356">616703356</a></td>
           <td>21:30-21:45 IST</td>
-        </tr>
-
+        </tr> -->
+<!-- 
         <tr class="pos">
           <td>19-09-2023</td>
           <td>𝄞⃝PariSingh𝄞⃝🍒🕊️<br />ID:<a href="http://www.kktv1.com/m/?roomid=629751046">629751046</a></td>
           <td><img src="img/Vs-min.png" alt="" /></td>
           <td>"💞S᭄sRiStï? "<br />ID:<a href="http://www.kktv1.com/m/?roomid=605056219">605056219</a></td>
           <td>21:45-22:00 IST</td>
-        </tr>
-
+        </tr> -->
+<!-- 
         <tr class="pos">
           <td>19-09-2023</td>
           <td>"😡👑ợµэи🐼✨🔥 "<br />ID:<a href="http://www.kktv1.com/m/?roomid=625028412">625028412</a></td>
           <td><img src="img/Vs-min.png" alt="" /></td>
           <td>"ANU🤍 "<br />ID:<a href="http://www.kktv1.com/m/?roomid=638033440">638033440</a></td>
           <td>22:00-22:15 IST</td>
-        </tr>
-
+        </tr> -->
+<!-- 
         <tr class="pos">
           <td>19-09-2023</td>
           <td>"Cute Angel 🥺 "<br />ID:<a href="http://www.kktv1.com/m/?roomid=589869054">589869054</a></td>
           <td><img src="img/Vs-min.png" alt="" /></td>
           <td>"💞S᭄ꦿ™?️SaRa🏝️ "<br />ID:<a href="http://www.kktv1.com/m/?roomid=597903766">597903766</a></td>
           <td>22:15-22:30 IST</td>
-        </tr>
-
+        </tr> -->
+<!-- 
         <tr class="pos">
           <td>19-09-2023</td>
           <td>"Avya❣️ "<br />ID:<a href="http://www.kktv1.com/m/?roomid=644332478">644332478</a></td>
           <td><img src="img/Vs-min.png" alt="" /></td>
           <td>":⁠-⁠(chahat.:⁠-⁠) "<br />ID:<a href="http://www.kktv1.com/m/?roomid=641336042">641336042</a></td>
           <td>22:30-22:45 IST</td>
-        </tr>
-
+        </tr> -->
+<!-- 
         <tr class="pos">
           <td>19-09-2023</td>
           <td>"༺☆ⲧᖇ𝑀☆༻chhaya "<br />ID:<a href="http://www.kktv1.com/m/?roomid=611205198">611205198</a></td>
           <td><img src="img/Vs-min.png" alt="" /></td>
           <td>"🆂᭄ꦿ🆂🅾🅱🅽🅾🅼👑. "<br />ID:<a href="http://www.kktv1.com/m/?roomid=634149111">634149111</a></td>
           <td>22:45-23:00 IST</td>
-        </tr>
-
-        <tr class="pos">
-          <td>19-09-2023</td>
-          <td>"Priyansi1 "<br />ID:<a href="http://www.kktv1.com/m/?roomid=631543176">631543176</a></td>
-          <td><img src="img/Vs-min.png" alt="" /></td>
-          <td>"S᭄🖤Ｔ𝒆∂∂ㄚ в𝒆𝐀я🖤 "<br />ID:<a href="http://www.kktv1.com/m/?roomid=633447348">633447348</a></td>
-          <td>23:00-23:15 IST</td>
-        </tr>
-
-        <tr class="pos">
-          <td>19-09-2023</td>
-          <td>"SINGER RAHUL SANU🎵 "<br />ID:<a href="http://www.kktv1.com/m/?roomid=624018371">624018371</a></td>
-          <td><img src="img/Vs-min.png" alt="" /></td>
-          <td>"🌹Rani.sk "<br />ID:<a href="http://www.kktv1.com/m/?roomid=635468097">635468097</a></td>
-          <td>23:15-23:30 IST</td>
-        </tr>
+        </tr> -->
 
       </table>
     </div>
@@ -1180,36 +1164,36 @@
           <th>Time</th>
         </tr>
         <tr class="pos">
-          <td>19-09-2023</td>
-          <td>"Avya❣️ "<br />ID:<a href="http://www.kktv1.com/m/?roomid=644332478">644332478</a></td>
+          <td>12-09-2024</td>
+          <td>radhika dogra<br />ID:<a href="http://www.kktv1.com/m/?roomid=652406713">652406713</a></td>
           <td><img src="img/Vs-min.png" alt="" /></td>
-          <td>":⁠-⁠(chahat.:⁠-⁠) "<br />ID:<a href="http://www.kktv1.com/m/?roomid=641336042">641336042</a></td>
-          <td>22:30-22:45 IST</td>
+          <td>ᰔᩚChαηςɧαɭ✿<br />ID:<a href="http://www.kktv1.com/m/?roomid=655298820">655298820</a></td>
+          <td>21:15-21:30 IST</td>
         </tr>
 
         <tr class="pos">
-          <td>19-09-2023</td>
-          <td>"༺☆ⲧᖇ𝑀☆༻chhaya "<br />ID:<a href="http://www.kktv1.com/m/?roomid=611205198">611205198</a></td>
+          <td>12-09-2024</td>
+          <td>💘🥀𝓐𝓴𝓴𝓾💘🥀<br />ID:<a href="http://www.kktv1.com/m/?roomid=650782030">650782030</a></td>
           <td><img src="img/Vs-min.png" alt="" /></td>
-          <td>"🆂᭄ꦿ🆂🅾🅱🅽🅾🅼👑. "<br />ID:<a href="http://www.kktv1.com/m/?roomid=634149111">634149111</a></td>
-          <td>22:45-23:00 IST</td>
+          <td>🌈 I S H A N A 🐼<br />ID:<a href="http://www.kktv1.com/m/?roomid=648464501">648464501</a></td>
+          <td>21:30-21:45 IST</td>
         </tr>
 
-        <tr class="pos">
+        <!-- <tr class="pos">
           <td>19-09-2023</td>
           <td>"Priyansi1 "<br />ID:<a href="http://www.kktv1.com/m/?roomid=631543176">631543176</a></td>
           <td><img src="img/Vs-min.png" alt="" /></td>
           <td>"S᭄🖤Ｔ𝒆∂∂ㄚ в𝒆𝐀я🖤 "<br />ID:<a href="http://www.kktv1.com/m/?roomid=633447348">633447348</a></td>
           <td>23:00-23:15 IST</td>
-        </tr>
+        </tr> -->
 
-        <tr class="pos">
+        <!-- <tr class="pos">
           <td>19-09-2023</td>
           <td>"SINGER RAHUL SANU🎵 "<br />ID:<a href="http://www.kktv1.com/m/?roomid=624018371">624018371</a></td>
           <td><img src="img/Vs-min.png" alt="" /></td>
           <td>"🌹Rani.sk "<br />ID:<a href="http://www.kktv1.com/m/?roomid=635468097">635468097</a></td>
           <td>23:15-23:30 IST</td>
-        </tr>
+        </tr> -->
 
       </table>
     </div>
@@ -1225,11 +1209,43 @@
         </tr>
 
         <tr class="pos">
-          <td>19-09-2023</td>
-          <td>"SINGER RAHUL SANU🎵 "<br />ID:<a href="http://www.kktv1.com/m/?roomid=624018371">624018371</a></td>
+          <td>12-09-2024</td>
+          <td>꧁𓊈𒆜 ℘ཞɛɛɬı𒆜𓊉꧂<br />ID:<a href="http://www.kktv1.com/m/?roomid=620757551">620757551</a></td>
           <td><img src="img/Vs-min.png" alt="" /></td>
-          <td>"🌹Rani.sk "<br />ID:<a href="http://www.kktv1.com/m/?roomid=635468097">635468097</a></td>
-          <td>23:15-23:30 IST</td>
+          <td>♣️᭄🍒™🏝️ sara🏝️<br />ID:<a href="http://www.kktv1.com/m/?roomid=597903766">597903766</a></td>
+          <td>21:45-22:00 IST</td>
+        </tr>
+
+        <tr class="pos"></tr>
+          <td>12-09-2024</td>
+          <td>Ashviii💖<br />ID:<a href="http://www.kktv1.com/m/?roomid=651784594">651784594</a></td>
+          <td><img src="img/Vs-min.png" alt="" /></td>
+          <td>彡[ᴘʀɪʏᴀɴᴋᴀ]彡<br />ID:<a href="http://www.kktv1.com/m/?roomid=627191612">627191612</a></td>
+          <td>22:00-22:15 IST</td>
+        </tr>
+
+        <tr class="pos"></tr>
+          <td>12-09-2024</td>
+          <td>➳⃝🦋🇪 🇸 🇭 🇦➳⃝🦋<br />ID:<a href="http://www.kktv1.com/m/?roomid=654855366">654855366</a></td>
+          <td><img src="img/Vs-min.png" alt="" /></td>
+          <td>Veronica ❤❤❤❤❤<br />ID:<a href="http://www.kktv1.com/m/?roomid=645174505">645174505</a></td>
+          <td>22:15-22:30 IST</td>
+        </tr>
+
+        <tr class="pos"></tr>
+          <td>12-09-2024</td>
+          <td>aradhyaa_👼🏻💗<br />ID:<a href="http://www.kktv1.com/m/?roomid=639022841">639022841</a></td>
+          <td><img src="img/Vs-min.png" alt="" /></td>
+          <td>꧁༒Ñîçk༒꧂❤️<br />ID:<a href="http://www.kktv1.com/m/?roomid=609967318">609967318</a></td>
+          <td>22:30-22:45 IST</td>
+        </tr>
+
+        <tr class="pos"></tr>
+          <td>12-09-2024</td>
+          <td>🅼🅾🅽🅸🆂🅷🅰🧿<br />ID:<a href="http://www.kktv1.com/m/?roomid=557831534">557831534</a></td>
+          <td><img src="img/Vs-min.png" alt="" /></td>
+          <td>⚡️ 𝓢𝓮𝓲𝓶𝓮𝓲 ⚡️<br />ID:<a href="http://www.kktv1.com/m/?roomid=642893073">642893073</a></td>
+          <td>22:45-23:00 IST</td>
         </tr>
 
       </table>
