--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
       <div class="rules">
         <div class="guide-content">
           <div class="guidecol-1"><img src="img/Modak.png" class="modak" alt=""></div>
-          <div class="guidecol-2">Top 30 Talents have to register their ids with SK employees to participate in this
-            event.</div>
+          <div class="guidecol-2">Top 10 Dancers, 4 Shayari, 10 Traditional Attire Fashion Battle talents have to register their ids with SK employees to participate in this event.</div>
         </div>
 
         <div class="guide-content">
@@ -53,7 +52,7 @@
 
         <div class="guide-content">
           <div class="guidecol-1"><img src="img/Modak.png" class="modak" alt=""></div>
-          <div class="guidecol-2">Top 18 talent (06 Talents from each category) that earns maximum beans will be qualified for the 2nd round i.e Final.
+          <div class="guidecol-2">Top talent from each category that earns maximum beans will be qualified for the 2nd round i.e Final.
           </div>
         </div>
 
@@ -1027,7 +1026,7 @@
       </button>
     </div>
     <div class="tab1">
-      <button onclick="openTab5('talentScheduleRound2','round24','round14')">
+      <button disabled onclick="openTab5('talentScheduleRound2','round24','round14')">
         <img src="img/Round2ButtonDeselect.png" alt="" id="round24" />
       </button>
     </div>
@@ -1528,8 +1527,8 @@
     </div>
   </div>
 
-
-  <div class="coltwo">
+<!-- leader board  comment -->
+  <!-- <div class="coltwo">
     <div class="tab">
       <button onclick="openTab1('user_leader','user1','talent1')">
         <img src="img/UserButtonSelect.png" alt="" id="user1" />
@@ -1540,8 +1539,8 @@
         <img src="img/TalentButtonDeselect.png" alt="" id="talent1" />
       </button>
     </div>
-  </div>
-  <div class="leaderBoard" id="user_leader">
+  </div> -->
+  <!-- <div class="leaderBoard" id="user_leader">
     <div class="coltwo1">
       <div class="tab1">
         <button onclick="openTab6('userleaderBoardRound1','round15','round25')">
@@ -1665,7 +1664,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <div class="leaderBoard" id="talent_leader" style="display: none;">
     <div class="coltwo1">
       <div class="tab1">
