schedule third tab issues

--- a/index.html
+++ b/index.html
@@ -1215,7 +1215,7 @@
           <td>21:45-22:00 IST</td>
         </tr>
 
-        <tr class="pos"></tr>
+        <tr class="pos">
           <td>12-09-2024</td>
           <td>Ashviii💖<br />ID:<a href="http://www.kktv1.com/m/?roomid=651784594">651784594</a></td>
           <td><img src="img/Vs-min.png" alt="" /></td>
@@ -1223,7 +1223,7 @@
           <td>22:00-22:15 IST</td>
         </tr>
 
-        <tr class="pos"></tr>
+        <tr class="pos">
           <td>12-09-2024</td>
           <td>➳⃝🦋🇪 🇸 🇭 🇦➳⃝🦋<br />ID:<a href="http://www.kktv1.com/m/?roomid=654855366">654855366</a></td>
           <td><img src="img/Vs-min.png" alt="" /></td>
@@ -1231,7 +1231,7 @@
           <td>22:15-22:30 IST</td>
         </tr>
 
-        <tr class="pos"></tr>
+        <tr class="pos">
           <td>12-09-2024</td>
           <td>aradhyaa_👼🏻💗<br />ID:<a href="http://www.kktv1.com/m/?roomid=639022841">639022841</a></td>
           <td><img src="img/Vs-min.png" alt="" /></td>
@@ -1239,14 +1239,13 @@
           <td>22:30-22:45 IST</td>
         </tr>
 
-        <tr class="pos"></tr>
+        <tr class="pos">
           <td>12-09-2024</td>
           <td>🅼🅾🅽🅸🆂🅷🅰🧿<br />ID:<a href="http://www.kktv1.com/m/?roomid=557831534">557831534</a></td>
           <td><img src="img/Vs-min.png" alt="" /></td>
           <td>⚡️ 𝓢𝓮𝓲𝓶𝓮𝓲 ⚡️<br />ID:<a href="http://www.kktv1.com/m/?roomid=642893073">642893073</a></td>
           <td>22:45-23:00 IST</td>
         </tr>
-
       </table>
     </div>
     
