--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
       </div>
       <div class="mySlide2" style="display: none">
         <div class="eventText1">
-          <p>Target:03-05 Million Gems</p>
+          <p>Target : 03-05 Million Gems</p>
         </div>
         <div class="coltwo">
           <div class="frame">
@@ -606,7 +606,7 @@
       </div>
       <div class="mySlide2" style="display: none">
         <div class="eventText1">
-          <p>Target:01-03 Million Gems</p>
+          <p>Target : 01-03 Million Gems</p>
         </div>
         <div class="colone">
           <div class="frame">
@@ -622,7 +622,7 @@
       </div>
       <div class="mySlide2" style="display: none;">
         <div class="eventText1">
-          <p>Target:500K–1 Million Gems</p>
+          <p>Target : 500K-1 Million Gems</p>
         </div>
         <div class="colone">
           <div class="frame">
@@ -673,7 +673,7 @@
       </div>
       <div class="mySlide4" style="display: none">
         <div class="eventText1">
-          <p>Target:05- 10 Million Gems target</p>
+          <p>Target : 05-10 Million Gems target</p>
         </div>
         <div class="coltwo">
           <div class="frame">
