--- a/index.html
+++ b/index.html
@@ -1026,7 +1026,7 @@
       </button>
     </div>
     <div class="tab1">
-      <button disabled onclick="openTab5('talentScheduleRound2','round24','round14')">
+      <button onclick="openTab5('talentScheduleRound2','round24','round14')">
         <img src="img/Round2ButtonDeselect.png" alt="" id="round24" />
       </button>
     </div>
@@ -1398,19 +1398,19 @@
             </tr>
 
             <tr class="pos">
-              <td>21-09-2023</td>
-              <td>💠 ⃪ͥ͢ ᭄ᷟֆɛռօʀɨ𐀀ǟ👒<br />ID:<a href="http://www.kktv1.com/m/?roomid=585800897">585800897</a></td>
+              <td>14-09-2024</td>
+              <td>radhika dogra<br />ID:<a href="http://www.kktv1.com/m/?roomid=652406713">652406713</a></td>
               <td><img src="img/Vs-min.png" alt="" /></td>
-              <td>"Ooru💫 "<br />ID:<a href="http://www.kktv1.com/m/?roomid=633310564">633310564</a></td>
-              <td>21:30-21:45 IST</td>
+              <td>🌈 I S H A N A 🐼<br />ID:<a href="http://www.kktv1.com/m/?roomid=648464501">648464501</a></td>
+              <td>21:15-21:30 IST</td>
             </tr>
   
             <tr class="pos">
-              <td>21-09-2023</td>
-              <td>🦋⃟✮⃝🇲u̷s̷k̷a̷n̷𝄟⃝)<br />ID:<a href="http://www.kktv1.com/m/?roomid=623248845">623248845</a></td>
+              <td>14-09-2024</td>
+              <td>💘🥀𝓐𝓴𝓴𝓾💘🥀<br />ID:<a href="http://www.kktv1.com/m/?roomid=650782030">650782030</a></td>
               <td><img src="img/Vs-min.png" alt="" /></td>
-              <td>"S᭄🖤Ｔ𝒆∂∂ㄚ в𝒆𝐀я🖤 "<br />ID:<a href="http://www.kktv1.com/m/?roomid=633447348">633447348</a></td>
-              <td>21:45-22:00 IST</td>
+              <td>ᰔᩚChαηςɧαɭ✿<br />ID:<a href="http://www.kktv1.com/m/?roomid=655298820">655298820</a></td>
+              <td>21:30-21:45 IST</td>
             </tr>
 
           </table>
@@ -1427,19 +1427,27 @@
             </tr>
 
             <tr class="pos">
-              <td>21-09-2023</td>
-              <td>❤️प्रिया ❤️❤️❤️❤️💞<br />ID:<a href="http://www.kktv1.com/m/?roomid=633906977">633906977</a></td>
+              <td>14-09-2024</td>
+              <td>🅼🅾🅽🅸🆂🅷🅰🧿<br />ID:<a href="http://www.kktv1.com/m/?roomid=557831534">557831534</a></td>
               <td><img src="img/Vs-min.png" alt="" /></td>
-              <td>💞S᭄ꦿ🤍༺Dђrΐtΐ༻🤍<br />ID:<a href="http://www.kktv1.com/m/?roomid=616703356">616703356</a></td>
-              <td>22:15-22:30 IST</td>
+              <td>♣️᭄🍒™🏝️ sara🏝️<br />ID:<a href="http://www.kktv1.com/m/?roomid=597903766">597903766</a></td>
+              <td>21:45-22:00 IST</td>
             </tr>
   
             <tr class="pos">
-              <td>21-09-2023</td>
-              <td>𝓐𝓴𝓼𝓱𝓲𝓽𝓪<br />ID:<a href="http://www.kktv1.com/m/?roomid=600872607">600872607</a></td>
+              <td>14-09-2024</td>
+              <td>꧁𓊈𒆜 ℘ཞɛɛɬı𒆜𓊉꧂<br />ID:<a href="http://www.kktv1.com/m/?roomid=620757551">620757551</a></td>
               <td><img src="img/Vs-min.png" alt="" /></td>
-              <td>"༺☆ⲧᖇ𝑀☆༻chhaya "<br />ID:<a href="http://www.kktv1.com/m/?roomid=611205198">611205198</a></td>
-              <td>22:30-22:45 IST</td>
+              <td>꧁༒Ñîçk༒꧂❤️<br />ID:<a href="http://www.kktv1.com/m/?roomid=609967318">609967318</a></td>
+              <td>22:00-22:15 IST</td>
+            </tr>
+
+            <tr class="pos"></tr>
+              <td>14-09-2024</td>
+              <td>➳⃝🦋🇪 🇸 🇭 🇦➳⃝🦋<br />ID:<a href="http://www.kktv1.com/m/?roomid=654855366">654855366</a></td>
+              <td><img src="img/Vs-min.png" alt="" /></td>
+              <td>⚡️ 𝓢𝓮𝓲𝓶𝓮𝓲 ⚡️<br />ID:<a href="http://www.kktv1.com/m/?roomid=642893073">642893073</a></td>
+              <td>22:15-22:30 IST</td>
             </tr>
           </table>
         </div>
@@ -1453,74 +1461,23 @@
               <th>Talent2</th>
               <th>Time</th>
             </tr>
-  
+
             <tr class="pos">
-              <td>21-09-2023</td>
-              <td>"🎙️ Singer Sarita 🎧 "<br />ID:<a href="http://www.kktv1.com/m/?roomid=584004453">584004453</a></td>
+              <td>14-09-2024</td>
+              <td>Jhalak 🥰<br />ID:<a href="http://www.kktv1.com/m/?roomid=653583789">653583789</a></td>
               <td><img src="img/Vs-min.png" alt="" /></td>
-              <td>🆂᭄ꦿ🆂🅾🅱🅽🅾🅼👑. <br />ID:<a href="http://www.kktv1.com/m/?roomid=634149111">634149111</a></td>
+              <td>✓®™Soni......🥀<br />ID:<a href="http://www.kktv1.com/m/?roomid=635752070">635752070</a></td>
               <td>20:45-21:00 IST</td>
             </tr>
   
             <tr class="pos">
-              <td>21-09-2023</td>
-              <td>𝄞⃝PariSingh𝄞⃝🍒🕊️<br />ID:<a href="http://www.kktv1.com/m/?roomid=629751046">629751046</a></td>
+              <td>14-09-2024</td>
+              <td>𝐀𝐀𝐑𝐙𝐔💝<br />ID:<a href="http://www.kktv1.com/m/?roomid=648978283">648978283</a></td>
               <td><img src="img/Vs-min.png" alt="" /></td>
-              <td>"🦢₴᭄ꦿ 𝙈𝙊𝙉𝘼🍡 "<br />ID:<a href="http://www.kktv1.com/m/?roomid=614097927">614097927</a></td>
+              <td>🎀𝘿𝙚𝙫𝙞𝙡'𝙨ᴬⁿᵍᵉˡ<br />ID:<a href="http://www.kktv1.com/m/?roomid=586652371">586652371</a></td>
               <td>21:00-21:15 IST</td>
             </tr>
-  
-            <tr class="pos">
-              <td>21-09-2023</td>
-              <td>"Vamp🖤 "<br />ID:<a href="http://www.kktv1.com/m/?roomid=643177643">643177643</a></td>
-              <td><img src="img/Vs-min.png" alt="" /></td>
-              <td>🎸Siya Singh 🎸🙂<br />ID:<a href="http://www.kktv1.com/m/?roomid=628264282">628264282</a></td>
-              <td>21:15-21:30 IST</td>
-            </tr>
-  
-            <tr class="pos">
-              <td>21-09-2023</td>
-              <td>💠 ⃪ͥ͢ ᭄ᷟֆɛռօʀɨ𐀀ǟ👒<br />ID:<a href="http://www.kktv1.com/m/?roomid=585800897">585800897</a></td>
-              <td><img src="img/Vs-min.png" alt="" /></td>
-              <td>"Ooru💫 "<br />ID:<a href="http://www.kktv1.com/m/?roomid=633310564">633310564</a></td>
-              <td>21:30-21:45 IST</td>
-            </tr>
-  
-            <tr class="pos">
-              <td>21-09-2023</td>
-              <td>🦋⃟✮⃝🇲u̷s̷k̷a̷n̷𝄟⃝)<br />ID:<a href="http://www.kktv1.com/m/?roomid=623248845">623248845</a></td>
-              <td><img src="img/Vs-min.png" alt="" /></td>
-              <td>"S᭄🖤Ｔ𝒆∂∂ㄚ в𝒆𝐀я🖤 "<br />ID:<a href="http://www.kktv1.com/m/?roomid=633447348">633447348</a></td>
-              <td>21:45-22:00 IST</td>
-            </tr>
-  
-            <tr class="pos">
-              <td>21-09-2023</td>
-              <td>"😡👑ợµэи🐼✨🔥 "<br />ID:<a href="http://www.kktv1.com/m/?roomid=625028412">625028412</a></td>
-              <td><img src="img/Vs-min.png" alt="" /></td>
-              <td>":⁠-⁠(chahat.:⁠-⁠) "<br />ID:<a href="http://www.kktv1.com/m/?roomid=641336042">641336042</a></td>
-              <td>22:00-22:15 IST</td>
-            </tr>
-  
-            <tr class="pos">
-              <td>21-09-2023</td>
-              <td>❤️प्रिया ❤️❤️❤️❤️💞<br />ID:<a href="http://www.kktv1.com/m/?roomid=633906977">633906977</a></td>
-              <td><img src="img/Vs-min.png" alt="" /></td>
-              <td>💞S᭄ꦿ🤍༺Dђrΐtΐ༻🤍<br />ID:<a href="http://www.kktv1.com/m/?roomid=616703356">616703356</a></td>
-              <td>22:15-22:30 IST</td>
-            </tr>
-  
-            <tr class="pos">
-              <td>21-09-2023</td>
-              <td>𝓐𝓴𝓼𝓱𝓲𝓽𝓪<br />ID:<a href="http://www.kktv1.com/m/?roomid=600872607">600872607</a></td>
-              <td><img src="img/Vs-min.png" alt="" /></td>
-              <td>"༺☆ⲧᖇ𝑀☆༻chhaya "<br />ID:<a href="http://www.kktv1.com/m/?roomid=611205198">611205198</a></td>
-              <td>22:30-22:45 IST</td>
-            </tr>
-  
-  
           </table>
-
         </div>
       </div>
     </div>
