--- a/index.html
+++ b/index.html
@@ -1442,7 +1442,7 @@
               <td>22:00-22:15 IST</td>
             </tr>
 
-            <tr class="pos"></tr>
+            <tr class="pos">
               <td>14-09-2024</td>
               <td>➳⃝🦋🇪 🇸 🇭 🇦➳⃝🦋<br />ID:<a href="http://www.kktv1.com/m/?roomid=654855366">654855366</a></td>
               <td><img src="img/Vs-min.png" alt="" /></td>
@@ -1484,7 +1484,7 @@
   </div>
 
 <!-- leader board  comment -->
-  <!-- <div class="coltwo">
+  <div class="coltwo">
     <div class="tab">
       <button onclick="openTab1('user_leader','user1','talent1')">
         <img src="img/UserButtonSelect.png" alt="" id="user1" />
@@ -1495,8 +1495,8 @@
         <img src="img/TalentButtonDeselect.png" alt="" id="talent1" />
       </button>
     </div>
-  </div> -->
-  <!-- <div class="leaderBoard" id="user_leader">
+  </div>
+  <div class="leaderBoard" id="user_leader">
     <div class="coltwo1">
       <div class="tab1">
         <button onclick="openTab6('userleaderBoardRound1','round15','round25')">
@@ -1620,7 +1620,7 @@
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
   <div class="leaderBoard" id="talent_leader" style="display: none;">
     <div class="coltwo1">
       <div class="tab1">
