--- a/index.html
+++ b/index.html
@@ -1649,40 +1649,40 @@
           <tr class="frames">
             <td class="td1">
               <div class="silverPro">
-                <a href="http://www.kktv1.com/m/?roomid=600872607"><img src="img/Talent/2nd talent.png" alt="img" /></a>
+                <a href="http://www.kktv1.com/m/?roomid=648978283"><img src="img/Talent/2nd talent.png" alt="img" /></a>
 
               </div>
               <div class="frameText">
                 <p>
-                  𝓐𝓴𝓼𝓱𝓲𝓽𝓪<br />
-                  ID:600872607 <br />
-                  <span>432,370 <img src="img/coin.png" alt="" /></span>
+                  𝐀𝐀𝐑𝐙𝐔💝<br />
+                  ID:648978283 <br />
+                  <span>425,050<img src="img/coin.png" alt="" /></span>
                 </p>
               </div>
             </td>
             <td class="td2">
               <div class="goldPro">
-                <a href="http://www.kktv1.com/m/?roomid=611205198"><img src="img/Talent/1st Talent.png" alt="" /></a>
+                <a href="http://www.kktv1.com/m/?roomid=586652371"><img src="img/Talent/1st Talent.png" alt="" /></a>
 
               </div>
               <div class="frameText">
                 <p>
-                  "༺☆ⲧᖇ𝑀☆༻chhaya "<br />
-                  ID:611205198 <br />
-                  <span>442,740 <img src="img/coin.png" alt="" /></span>
+                  🎀𝘿𝙚𝙫𝙞𝙡'𝙨ᴬⁿᵍᵉˡ<br />
+                  ID:586652371 <br />
+                  <span>1,490,300<img src="img/coin.png" alt="" /></span>
                 </p>
               </div>
             </td>
             <td class="td3">
               <div class="bronzePro">
-                <a href="http://www.kktv1.com/m/?roomid=634149111"><img src="img/Talent/3rd talent.png" alt="" /></a>
+                <a href="http://www.kktv1.com/m/?roomid=653583789"><img src="img/Talent/3rd talent.png" alt="" /></a>
 
               </div>
               <div class="frameText">
                 <p>
-                  "🆂᭄ꦿ🆂🅾🅱🅽🅾🅼👑. "<br />
-                  ID:634149111 <br />
-                  <span>411,020 <img src="img/coin.png" alt="" /></span>
+                  Jhalak 🥰<br />
+                  ID:653583789 <br />
+                  <span>133,450<img src="img/coin.png" alt="" /></span>
                 </p>
               </div>
             </td>
