--- a/index.html
+++ b/index.html
@@ -1700,40 +1700,40 @@
           <tr class="frames">
             <td class="td1">
               <div class="silverPro">
-                <a href="http://www.kktv1.com/m/?roomid=600872607"><img src="img/Talent/2nd talent.png" alt="img" /></a>
+                <a href="http://www.kktv1.com/m/?roomid=655298820"><img src="img/Talent/2nd talent.png" alt="img" /></a>
   
               </div>
               <div class="frameText">
                 <p>
-                  Kadir<br />
-                  ID:522875707 <br />
-                  <span>532,370 <img src="img/coin.png" alt="" /></span>
+                  ᰔᩚChαηςɧαɭ✿<br />
+                  ID:655298820 <br />
+                  <span>305,000 <img src="img/coin.png" alt="" /></span>
                 </p>
               </div>
             </td>
             <td class="td2">
               <div class="goldPro">
-                <a href="http://www.kktv1.com/m/?roomid=611205198"><img src="img/Talent/1st Talent.png" alt="" /></a>
+                <a href="http://www.kktv1.com/m/?roomid=652406713"><img src="img/Talent/1st Talent.png" alt="" /></a>
   
               </div>
               <div class="frameText">
                 <p>
-                  "OCD Bhai"<br />
-                  ID:611202484 <br />
-                  <span>257,740 <img src="img/coin.png" alt="" /></span>
+                  radhika dogra<br />
+                  ID:652406713 <br />
+                  <span>1,053,500<img src="img/coin.png" alt="" /></span>
                 </p>
               </div>
             </td>
             <td class="td3">
               <div class="bronzePro">
-                <a href="http://www.kktv1.com/m/?roomid=634149111"><img src="img/Talent/3rd talent.png" alt="" /></a>
+                <a href="http://www.kktv1.com/m/?roomid=648464501"><img src="img/Talent/3rd talent.png" alt="" /></a>
   
               </div>
               <div class="frameText">
                 <p>
-                  "Jabir"<br />
-                  ID:54819111 <br />
-                  <span>541,020 <img src="img/coin.png" alt="" /></span>
+                  🌈 I S H A N A 🐼<br />
+                  ID:648464501 <br />
+                  <span>87,240<img src="img/coin.png" alt="" /></span>
                 </p>
               </div>
             </td>
