--- a/index.html
+++ b/index.html
@@ -1751,40 +1751,40 @@
           <tr class="frames">
             <td class="td1">
               <div class="silverPro">
-                <a href="http://www.kktv1.com/m/?roomid=600872607"><img src="img/Talent/2nd talent.png" alt="img" /></a>
+                <a href="http://www.kktv1.com/m/?roomid=557831534"><img src="img/Talent/2nd talent.png" alt="img" /></a>
   
               </div>
               <div class="frameText">
                 <p>
-                  Anjali<br />
-                  ID:522875707 <br />
-                  <span>532,370 <img src="img/coin.png" alt="" /></span>
+                  🅼🅾🅽🅸🆂🅷🅰🧿<br />
+                  ID:557831534 <br />
+                  <span>531,620<img src="img/coin.png" alt="" /></span>
                 </p>
               </div>
             </td>
             <td class="td2">
               <div class="goldPro">
-                <a href="http://www.kktv1.com/m/?roomid=611205198"><img src="img/Talent/1st Talent.png" alt="" /></a>
+                <a href="http://www.kktv1.com/m/?roomid=642893073"><img src="img/Talent/1st Talent.png" alt="" /></a>
   
               </div>
               <div class="frameText">
                 <p>
-                  "Rajat"<br />
-                  ID:611202484 <br />
-                  <span>257,740 <img src="img/coin.png" alt="" /></span>
+                  ⚡️ 𝓢𝓮𝓲𝓶𝓮𝓲 ⚡️<br />
+                  ID:642893073 <br />
+                  <span>3,550,000<img src="img/coin.png" alt="" /></span>
                 </p>
               </div>
             </td>
             <td class="td3">
               <div class="bronzePro">
-                <a href="http://www.kktv1.com/m/?roomid=634149111"><img src="img/Talent/3rd talent.png" alt="" /></a>
+                <a href="http://www.kktv1.com/m/?roomid=654855366"><img src="img/Talent/3rd talent.png" alt="" /></a>
   
               </div>
               <div class="frameText">
                 <p>
-                  "Neha"<br />
-                  ID:54819111 <br />
-                  <span>541,020 <img src="img/coin.png" alt="" /></span>
+                  ➳⃝🦋🇪 🇸 🇭 🇦➳⃝🦋<br />
+                  ID:654855366 <br />
+                  <span>285,000<img src="img/coin.png" alt="" /></span>
                 </p>
               </div>
             </td>
