profile image has been updated

--- a/index.html
+++ b/index.html
@@ -1649,7 +1649,7 @@
           <tr class="frames">
             <td class="td1">
               <div class="silverPro">
-                <a href="http://www.kktv1.com/m/?roomid=648978283"><img src="img/Talent/2nd talent.png" alt="img" /></a>
+                <a href="http://www.kktv1.com/m/?roomid=648978283"><img src="img/Talent/Dance/secondProfile.png" alt="img" /></a>
 
               </div>
               <div class="frameText">
@@ -1662,7 +1662,7 @@
             </td>
             <td class="td2">
               <div class="goldPro">
-                <a href="http://www.kktv1.com/m/?roomid=586652371"><img src="img/Talent/1st Talent.png" alt="" /></a>
+                <a href="http://www.kktv1.com/m/?roomid=586652371"><img src="img/Talent/Dance/fristProfile.png" alt="" /></a>
 
               </div>
               <div class="frameText">
@@ -1675,7 +1675,7 @@
             </td>
             <td class="td3">
               <div class="bronzePro">
-                <a href="http://www.kktv1.com/m/?roomid=653583789"><img src="img/Talent/3rd talent.png" alt="" /></a>
+                <a href="http://www.kktv1.com/m/?roomid=653583789"><img src="img/Talent/Dance/thirdProfile.png" alt="" /></a>
 
               </div>
               <div class="frameText">
@@ -1700,7 +1700,7 @@
           <tr class="frames">
             <td class="td1">
               <div class="silverPro">
-                <a href="http://www.kktv1.com/m/?roomid=655298820"><img src="img/Talent/2nd talent.png" alt="img" /></a>
+                <a href="http://www.kktv1.com/m/?roomid=655298820"><img src="img/Talent/Shayri/secondProfile.png" alt="img" /></a>
   
               </div>
               <div class="frameText">
@@ -1713,7 +1713,7 @@
             </td>
             <td class="td2">
               <div class="goldPro">
-                <a href="http://www.kktv1.com/m/?roomid=652406713"><img src="img/Talent/1st Talent.png" alt="" /></a>
+                <a href="http://www.kktv1.com/m/?roomid=652406713"><img src="img/Talent/Shayri/firstProfile.png" alt="" /></a>
   
               </div>
               <div class="frameText">
@@ -1726,7 +1726,7 @@
             </td>
             <td class="td3">
               <div class="bronzePro">
-                <a href="http://www.kktv1.com/m/?roomid=648464501"><img src="img/Talent/3rd talent.png" alt="" /></a>
+                <a href="http://www.kktv1.com/m/?roomid=648464501"><img src="img/Talent/Shayri/thirdProfile.png" alt="" /></a>
   
               </div>
               <div class="frameText">
@@ -1751,7 +1751,7 @@
           <tr class="frames">
             <td class="td1">
               <div class="silverPro">
-                <a href="http://www.kktv1.com/m/?roomid=557831534"><img src="img/Talent/2nd talent.png" alt="img" /></a>
+                <a href="http://www.kktv1.com/m/?roomid=557831534"><img src="img/Talent/Fashion/secondProfile.png" alt="img" /></a>
   
               </div>
               <div class="frameText">
@@ -1764,7 +1764,7 @@
             </td>
             <td class="td2">
               <div class="goldPro">
-                <a href="http://www.kktv1.com/m/?roomid=642893073"><img src="img/Talent/1st Talent.png" alt="" /></a>
+                <a href="http://www.kktv1.com/m/?roomid=642893073"><img src="img/Talent/Fashion/firstProfile.png" alt="" /></a>
   
               </div>
               <div class="frameText">
@@ -1777,7 +1777,7 @@
             </td>
             <td class="td3">
               <div class="bronzePro">
-                <a href="http://www.kktv1.com/m/?roomid=654855366"><img src="img/Talent/3rd talent.png" alt="" /></a>
+                <a href="http://www.kktv1.com/m/?roomid=654855366"><img src="img/Talent/Fashion/thirdProfile.png" alt="" /></a>
   
               </div>
               <div class="frameText">
